[gd_scene load_steps=10 format=3 uid="uid://fwrwwy8t1e2u"]

[ext_resource type="Script" path="res://scripts/edit_profile.gd" id="1_in2s6"]
[ext_resource type="Texture2D" uid="uid://cbpabvbncsrqv" path="res://assets/images/bg.png" id="2_17if4"]
[ext_resource type="Texture2D" uid="uid://by8n8uapqyxmx" path="res://assets/images/clown.png" id="2_36ldt"]
[ext_resource type="FontFile" uid="uid://cf3a7mowy5fgl" path="res://assets/fonts/kenvector_future.ttf" id="4_lv30f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hv8q"]
bg_color = Color(0.729412, 0.215686, 0.215686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p88d8"]
bg_color = Color(0.129412, 0.129412, 0.129412, 0.298039)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snw1d"]
bg_color = Color(0.129412, 0.129412, 0.129412, 0.298039)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.129412, 0.129412, 0.129412, 0.298039)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ilxc5"]
bg_color = Color(0.129412, 0.129412, 0.129412, 0.298039)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.729412, 0.215686, 0.215686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_6wto1"]
default_font = ExtResource("4_lv30f")
Button/styles/hover = SubResource("StyleBoxFlat_p88d8")
Button/styles/normal = SubResource("StyleBoxFlat_snw1d")
Button/styles/pressed = SubResource("StyleBoxFlat_ilxc5")

[node name="EditProfile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_in2s6")

[node name="BGDimming" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.180392, 0.180392, 0.262745)

[node name="EditProfilePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -757.5
offset_top = -432.5
offset_right = 757.5
offset_bottom = 432.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6hv8q")

[node name="BGDetails" type="TextureRect" parent="EditProfilePanel"]
self_modulate = Color(1, 1, 1, 0.294118)
layout_mode = 2
texture = ExtResource("2_17if4")
expand_mode = 1

[node name="MainVertical" type="VBoxContainer" parent="EditProfilePanel"]
layout_mode = 2

[node name="HRow" type="HBoxContainer" parent="EditProfilePanel/MainVertical"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PlayerIcon" type="TextureRect" parent="EditProfilePanel/MainVertical/HRow"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
texture = ExtResource("2_36ldt")
expand_mode = 5
stretch_mode = 4

[node name="UserNameLabel" type="Label" parent="EditProfilePanel/MainVertical/HRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_lv30f")
theme_override_font_sizes/font_size = 30
text = "UserNameFromDB"

[node name="LogOutButton" type="Button" parent="EditProfilePanel/MainVertical/HRow"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "LogOut"

[node name="IconSelection" type="GridContainer" parent="EditProfilePanel/MainVertical"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_6wto1")
columns = 5

[node name="SaveIconButton" type="Button" parent="EditProfilePanel/MainVertical"]
layout_mode = 2
size_flags_horizontal = 4
text = "Save Icon"

[node name="Close" type="Button" parent="."]
layout_mode = 2
offset_left = 1688.0
offset_top = 108.0
offset_right = 1718.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 36
text = "X"
